# mysql-connector

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  Patient.cpp  Patient.h  PatientLevelAttributes.json  Property.h  QueryFunctor.h  Table.h  Type.h  Util.h  main.cpp
jsoncpp/lib/pkgconfig/: jsoncpp.pc
mysql-connector/: BUILDINFO
mysql-connector/include/cppconn/: version_info.h
